// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders OutlinedButton 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderColor": "#007AFF",
        "borderRadius": 3,
        "borderWidth": 1,
        "height": 36,
        "justifyContent": "center",
        "minWidth": 64,
        "paddingHorizontal": 16,
      },
      Object {
        "backgroundColor": "red",
        "color": "white",
      },
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "color": "#FFFFFF",
          "fontFamily": "System",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": -0.32,
          "lineHeight": 21,
        },
        Array [
          Object {
            "color": "#007AFF",
          },
          Object {
            "backgroundColor": "transparent",
            "fontFamily": "System",
            "fontWeight": "600",
          },
          undefined,
        ],
      ]
    }
  >
    New
  </Text>
</View>
`;

exports[`renders disabled OutlinedButton 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderColor": "#007AFF",
        "borderRadius": 3,
        "borderWidth": 1,
        "height": 36,
        "justifyContent": "center",
        "minWidth": 64,
        "paddingHorizontal": 16,
      },
      Object {
        "backgroundColor": "red",
        "color": "white",
      },
      Object {
        "borderColor": "#D1D1D6",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "color": "#FFFFFF",
          "fontFamily": "System",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": -0.32,
          "lineHeight": 21,
        },
        Array [
          Object {
            "color": "#D1D1D6",
          },
          Object {
            "backgroundColor": "transparent",
            "fontFamily": "System",
            "fontWeight": "600",
          },
          undefined,
        ],
      ]
    }
  >
    New
  </Text>
</View>
`;
